--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="telescope1.png" type="image/png">
     <link rel="stylesheet" href="https//fonts.googleapis.com/earlyaccess/nanumpenscript.css">
 
-    <title>별과 시</title>
+    <title>별과 시 그리고 그림</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
